# openclaw-workspace

./: .gitignore  AGENTS.md  BRIF_2026-03-26.md  CodexBar_Update.bat  DREAMS.md  Dockerfile.memU  HEARTBEAT.md  IDENTITY.md  MEMORY.md  PROJECT_STATUS.md  README_INSTALL_LOSSLESS_CLAW.md  SOUL.md  TASKS.md  TODOS.md  TOOLS.md  USER.md  WORKFLOW_AUTO.md  aav43ltnkkdsniukjqrfskiichuc8k6s  khovkvqtrijhpbg1gkiv2ivetc7hfn6i  manifest  openrouter-free-models.md  openrouter-setup.md  test_memu.py  test_memu_cloud.py  test_memu_docker.py  test_memu_hunter.py  test_memu_openrouter.py  user_sorter.py  ВАЙБКОДИНГ_РОАДМАП.md  ВАЙБКОДИНГ_РОАДМАП_2.0.md  ГЛОССАРИЙ.md
.beads/: metadata.json
.brv/: config.json
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
projects/Bot_TrueConf/bot_trueconf/: .dockerignore  .env.example  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/Bot_TrueConf/bot_trueconf/bot_trueconf/: __init__.py
projects/Bot_TrueConf/bot_trueconf/bot_trueconf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/Bot_TrueConf/bot_trueconf/bot_trueconf/auth/: middleware.py  rate_limiter.py  session.py
projects/Bot_TrueConf/bot_trueconf/bot_trueconf/gateway/: __init__.py  client.py
projects/Bot_TrueConf/bot_trueconf/bot_trueconf/handlers/: __init__.py  commands.py  files.py  indicators.py  message.py
projects/Bot_TrueConf/bot_trueconf/bot_trueconf/utils/: formatter.py
projects/Bot_TrueConf/bot_trueconf/tests/: test_commands.py  test_files.py  test_gateway.py  test_message.py
ОВ/: TECH.md  (+1 more)
(+506 files in other folders)
