[project]
name = "bot_trueconf"
version = "0.1.0"
description = "TrueConf bot via OpenClaw Gateway"
requires-python = ">=3.11"
dependencies = [
    "python-trueconf-bot>=1.1.1",
    "httpx",
    "pydantic>=2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
